refactor: 가계부 1단계 작성 로직 개선